--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/mzvonar/getIn/issues"
   },
-  "homepage": "https://github.com/mzvonar/getIn#readme"
+  "homepage": "https://github.com/mzvonar/getIn#readme",
+  "devDependencies": {
+    "mocha": "3.4.2"
+  }
 }
