--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/mzvonar/getIn#readme",
   "devDependencies": {
+    "expect": "1.20.2",
     "mocha": "3.4.2"
   }
 }
