--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Get value from object by path. Undefined-safe and accepts default value",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,9 @@
   },
   "homepage": "https://github.com/mzvonar/getIn#readme",
   "devDependencies": {
+    "coveralls": "2.13.1",
     "expect": "1.20.2",
+    "istanbul": "0.4.5",
     "mocha": "3.4.2"
   }
 }
