--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "type": "git",
     "url": "git+https://github.com/mzvonar/getIn.git"
   },
+  "files": [
+    "dist",
+    "index.js"
+  ],
   "keywords": [
     "get",
     "getIn",
