--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.10",
   "description": "Get value from object by path. Undefined-safe and accepts default value",
   "main": "dist/index.js",
-  "module": "index.js",
   "scripts": {
     "build": "NODE_ENV=production babel index.js -d dist --ignore 'test/*' --copy-files",
     "prepublish": "npm run build",
@@ -15,8 +14,7 @@
     "url": "git+https://github.com/mzvonar/getIn.git"
   },
   "files": [
-    "dist",
-    "index.js"
+    "dist"
   ],
   "keywords": [
     "get",
